--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -3,7 +3,7 @@
   font-family: 'Inter';
   font-size: 16px;
   line-height: 26.08px;
-  font-weight 400;
+  font-weight: 400;
 }
 
 @media screen and (max-width:768px) {
