--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,13 +6,14 @@
     width: calc(100% - 48px*2);
 }
 
-@media screen and (max-width: 984px) {
+@media screen and (max-width: 1080px) {
     .photo-grid {
         width: calc(100% - 24px*2);
     }
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 768px) {
     .photo-grid {
         width: calc(100% - 16px*2);
     }
+}
