--- a/blocks/cover/__background-link/cover__background-link.css
+++ b/blocks/cover/__background-link/cover__background-link.css
@@ -1,11 +1,12 @@
 .cover__background-link {
+    margin-left: 0;
     width: 100%;
     height: 100%;
-    position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    text-decoration: none;
-    color: #fff;
+    justify-content: center;
+    object-fit: cover;
+    background: url("../../../images/cover-route-66.jpg") no-repeat center;
+    background-size: 100% 100%; 
 }
