--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,19 +1,28 @@
 .cover__subtitle {
-    width: 320px;
-    text-align: center;
-    font-family: 'Inter';
-    font-weight: 400;
+    max-width: 320px;
     font-size: 18px;
     line-height: 1.22;
-    z-index: 1;
+    width: 27%;
+    text-align: center;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1024px) {
     .cover__subtitle {
-        width: 288px;
-        height: 48px;
-        text-align: center;
+        width: 40%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .cover__subtitle {
+        width: 70%;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .cover__subtitle {
+        width: 90%;
         font-size: 14px;
         line-height: 1.1;
+        text-align: center;
     }
 }
