--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,43 +1,36 @@
 @import url('__title/cover__title.css');
 @import url('__subtitle/cover__subtitle.css');
-@import url('__background/cover__background.css');
 @import url('__background-link/cover__background-link.css');
 
 .cover {
-  margin: 0 auto;
-  width: calc(100% - 48px * 2);
-  max-width: 1184px;
+  margin: 0 auto 92px auto;
+  max-width: calc(100vw - 48px*2);
+  width: 100%;
   height: 740px;
+  overflow: hidden;
+  position: relative;
+  align-self: center;
+  text-align: center;
   box-sizing: border-box;
-  }
+}
 
 .cover:hover {
   opacity: 0.3;
   filter: alpha(opacity=30);
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1024px) {
+  .cover {
+    max-width: 100%;
+    height: calc(100vw * (640 / 1024));
+    margin-bottom: 88px;
+  }
+}
+
+@media screen and (max-width: 320px) {
   .cover {
     width: 100%;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  .cover__link {
-      min-height: 640px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .cover__link {
-      min-height: 480px;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .cover__link {
-      min-height: 200px;
-      margin-bottom: 64px;
-      box-sizing: content-box;
+    height: calc(100vw * (200 / 320px));
+    margin-bottom: 64px;
   }
 }
