--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,8 +1,13 @@
 .footer__copyright {
-  padding: 0;
   margin: 0;
-  font-family: 'Inter';
-  font-weight: 400;
+  padding: 0;
   font-size: 14px;
   line-height: 1.14;
+}
+
+@media screen and (max-width: 768px) {
+  .footer__copyright {
+    padding-left: 16px;
+    line-height: 1;
+  }
 }
