--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,21 +1,14 @@
 .footer__link {
-  display: block;
   margin-right: 18px;
-  font-family: 'Inter';
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.12;
 }
 
-.footer__link:hover {
-  opacity: .8;
-}
-
-@media screen and (max-width:425px) {
+@media screen and (max-width: 640px) {
   .footer__link {
-      display: block;
-      font-size: 24px;
-      line-height: 24px;
-      margin-bottom: 12px;
+    margin: 0 0 32px 0;
+    font-size: 24px;
+    line-height: 1;
+    display: block;
   }
 }
