--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,30 +3,29 @@
 @import url('__copyright/footer__copyright.css');
 
 .footer {
-    width: calc(100% - 48px * 2);
-    max-width: 1184px;
-    margin: 92px auto 24px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  width: calc(100% - 48px*2);
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 24px;
 }
 
-@media screen and (max-width: 1024px) and (min-width: 769px) {
-    .footer {
-        width: calc(100% - 24px * 2);
-        max-width: 720px;
-        margin: 88px auto 24px;
-    }
+@media screen and (max-width: 1024px) {
+  .footer {
+    width: calc(100% - 24px*2);
+  }
 }
 
-@media screen and (max-width: 768px) and (min-width: 320px) {
-    .footer {
-        width: 52.5%;
-        margin-top: 64px;
-        margin-bottom: 24px;
-        margin-left: 16px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
+@media screen and (max-width: 768px) {
+  .footer {
+    width: calc(100% - 16px*2);
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .footer {
+    display: block;
+    width: 100%;
+    min-width: 168px;
+  }
 }
