--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -31,6 +31,7 @@
 
 @media screen and (max-width: 640px) {
   .place {
+    padding: 0;
     margin-bottom: 48px;
     grid-template-columns: auto;
     grid-template-rows: auto auto auto;
