--- a/cover/cover.css
+++ b/cover/cover.css
@@ -3,14 +3,15 @@
 @import url('__background-link/cover__background-link.css');
 
 .cover {
-  margin: 0 auto;
-  max-width: 1184px;
-  width: calc(100% - 48px * 2);
+  margin: 0 auto 92px auto;
+  max-width: calc(100vw - 48px*2);
+  width: 100%;
   height: 740px;
+  overflow: hidden;
+  position: relative;
+  align-self: center;
+  text-align: center;
   box-sizing: border-box;
-  background-image: url(../../images/cover-route-66.jpg);
-  background-size: cover;
-  background-position: center;
 }
 
 .cover:hover {
@@ -18,27 +19,18 @@
   filter: alpha(opacity=30);
 }
 
-@media screen and (max-width: 1280px) {
-  .cover {
-    width: 100%;
-  }
-}
-
 @media screen and (max-width: 1024px) {
   .cover {
-    min-height: 640px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .cover {
-    min-height: 480px;
+    max-width: 100%;
+    height: calc(100vw * (640 / 1024));
+    margin-bottom: 88px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .cover {
+    width: 100%;
+    height: calc(100vw * (200 / 320px));
     margin-bottom: 64px;
-    box-sizing: content-box;
   }
 }
