--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -4,6 +4,10 @@
     line-height: 1.22;
     width: 27%;
     text-align: center;
+    text-decoration: none;
+    position: relative;
+    color: #fff;
+    z-index: 1;
 }
 
 @media screen and (max-width: 1024px) {
