--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,6 +6,9 @@
   font-weight: 900;
   font-size: 72px;
   line-height: 1.1;
+  position: relative;
+  color: #fff;
+  z-index: 1;
 }
 
 @media screen and (max-width: 767px) {
