--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,12 +1,37 @@
 .header__lang-link {
-    margin-left: 18px;
+    margin: 46px 148px 0 0;
     font-size: 24px;
-    line-height: 1.17;
+    line-height: 28px;
+}
+
+.header__lang-link:first-child {
+    margin-right: 18px;
+}
+}
+
+@media screen and (max-width: 1024px) {
+    .header__lang-link {
+        margin: 46px 48px 0 0;
+        font-size: 18px;
+        line-height: 20px;
+
+    }
 }
 
 @media screen and (max-width: 768px) {
     .header__lang-link {
+        margin: 46px 24px 0 0;
         font-size: 18px;
-        line-height: 1.33;
+        line-height: 20px;
+
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .header__lang-link {
+        margin: 30px 16px 0 0;
+        font-size: 18px;
+        line-height: 20px;
+
     }
 }
