--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,13 +1,27 @@
 .header__logo {
+    margin: 34px 0 58px 148px;
     width: 190px;
     height: 44px;
     background-size: cover;
     background-repeat: no-repeat;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 1024px) {
     .header__logo {
+        margin: 34px 0 50px 148px;
         max-width: 156px;
         max-height: 36px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .header__logo {
+        margin: 24px 0 50px 148px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .header__logo {
+        margin: 16px 0 50px 148px;
     }
 }
