--- a/blocks/place/__image-item/place__image-item.css
+++ b/blocks/place/__image-item/place__image-item.css
@@ -1,9 +1,10 @@
 .place__image-item {
   margin: 0;
   padding: 0;
+  max-width: 100%;
   min-width: 425px;
   min-height: 460px;
-  width: 100%;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 1280px) {
