--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,6 +1,7 @@
 .place__title {
-  margin: 0;
   grid-area: title;
+  padding: 0;
+  margin: 0;
   font-weight: 900;
   font-size: 72px;
   line-height: 1.06;
@@ -15,8 +16,7 @@
 
 @media screen and (max-width: 768px) {
   .place__title {
-    padding-left: 16px;
-    padding-bottom: 32px;
+    margin: 0 16px;
     font-size: 32px;
   }
 }
