--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,12 +1,13 @@
 .place__website {
+  margin: 0;
   grid-area: website;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 768px) {
   .place__website {
-    display: none;
+    grid-area: website;
   }
 }
