--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -8,7 +8,8 @@
 @import url('__image-item/place__image-item.css');
 
 .place {
-  margin-bottom: 80px;
+  margin: 0 0 80px 0;
+  padding: 0;
   display: grid;
   grid-template-columns: minmax(auto, 1fr) auto;
   grid-template-rows: auto auto;
@@ -31,14 +32,11 @@
 
 @media screen and (max-width: 640px) {
   .place {
+    margin: 0 16px 48px 16px;
     padding: 0;
-    margin-bottom: 48px;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
-    grid-template-areas:
-      "title"
-      "image"
-      "description";
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     grid-gap: 32px;
   }
 }
