--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,19 +1,19 @@
 .places {
-    margin: 0 0 92px -40px;
+    margin: 0 0 92px 0;
     padding: 0;
-    width: calc(100% - 148px*2);
+    width: calc(100% - 148px * 2);
     box-sizing: border-box;
 }
 
 @media screen and (max-width: 1024px) {
     .places {
-        width: calc(100% - 48px*2);
+        width: calc(100% - 48px * 2);
     }
 }
 
 @media screen and (max-width: 768px) {
     .places {
-        width: calc(100% - 24px*2);
+        width: calc(100% - 24px * 2);
     }
 }
 
