--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -17,7 +17,7 @@
 @media screen and (max-width: 1024px) {
   .cover {
     max-width: 100%;
-    height: calc(100vw * (640 / 1024));
+    height: calc(100vw * (640px / 1024px));
     margin-bottom: 88px;
   }
 }
@@ -25,7 +25,7 @@
 @media screen and (max-width: 320px) {
   .cover {
     width: 100%;
-    height: calc(100vw * (200 / 320px));
+    height: calc(100vw * (200px / 320px));
     margin-bottom: 64px;
   }
 }
