--- a/blocks/cover/__background-link/cover__background-link.css
+++ b/blocks/cover/__background-link/cover__background-link.css
@@ -1,30 +1,52 @@
 .cover__background-link {
-    margin-left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    object-fit: cover;
-    text-decoration: none;
-    position: relative;
-    z-index: 1;
-}
-
-.cover__background-link:hover {
-    opacity: .25;
-    cursor: pointer;
+  margin: 0 auto;
+  padding: 25% 0;
+  max-width: 100vw;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: url("../../../images/cover-route-66.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  text-decoration: none;
+  text-align: center;
+  z-index: 1;
+  color: #fff;
 }
 
 .cover__background-link::before {
-    content: "";
-    background-image: url("../../../images/cover-route-66.jpg");
-    background-size: cover;
-    background-position: top center;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(42, 44, 47, 0.3);
 }
+
+.cover__background-link:hover::before {
+  cursor: pointer;
+  background-color: rgba(42, 44, 47, 0.8);
+  transition: 0.3s;
+}
+
+@media screen and (max-width: 1279px) {
+  .cover__background-link {
+    padding: 23.85% 0;
+  }
+
+  @media screen and (max-width: 1023px) {
+    .cover__background-link {
+      padding: 21.40% 0;
+    }
+
+
+    @media screen and (max-width: 767px) {
+      .cover__background-link {
+        width: 100vw
+        padding: 18.4% 0;
+      }
+    }
