--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,32 +1,17 @@
 .cover__subtitle {
-    max-width: 320px;
-    font-size: 18px;
-    line-height: 1.22;
-    width: 27%;
-    text-align: center;
-    text-decoration: none;
-    position: relative;
-    color: #fff;
-    z-index: 3;
+  margin: 16px 0 0;
+  max-width: 320px;
+  position: relative;
+  font-size: 14px;
+  line-height: 16px;
+  z-index: 2;
 }
 
-@media screen and (max-width: 1024px) {
-    .cover__subtitle {
-        width: 40%;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .cover__subtitle {
-        width: 70%;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .cover__subtitle {
-        width: 90%;
-        font-size: 14px;
-        line-height: 1.1;
-        text-align: center;
-    }
+@media screen and (max-width: 767px) {
+  .cover__subtitle {
+    margin: 16px 0 0;
+    width: 90%;
+    font-size: 14px;
+    line-height: 16px;
+  }
 }
