--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,14 +1,11 @@
 .cover__title {
-  max-width: 656px;
-  width: 65%;
-  margin: 0 auto;
-  text-align: center;
+  margin: 0;
+  width: 90%;
+  position: relative;
   font-weight: 900;
   font-size: 72px;
-  line-height: 1.1;
-  position: relative;
-  color: #fff;
-  z-index: 3;
+  line-height: 76px;
+  z-index: 2;
 }
 
 @media screen and (max-width: 767px) {
