--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,31 +1,20 @@
-@import url('__title/cover__title.css');
-@import url('__subtitle/cover__subtitle.css');
-@import url('__background-link/cover__background-link.css');
+@import url("__background-link/cover__background-link.css");
+@import url("__title/cover__title.css");
+@import url("__subtitle/cover__subtitle.css");
 
 .cover {
-  margin: 0 auto 92px auto;
-  max-width: calc(100vw - 48px * 2);
-  width: 100%;
-  height: 740px;
-  overflow: hidden;
-  position: relative;
-  align-self: center;
-  text-align: center;
-  box-sizing: border-box;
+  margin: 92px auto;
+  max-width: 1184px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
   .cover {
-    max-width: 100%;
-    height: calc(100% * (.625));
-    margin-bottom: 88px;
+    margin: 89px auto;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
   .cover {
-    width: 100%;
-    height: calc(100% * (200px / 320px));
-    margin-bottom: 64px;
+    margin: 64px auto;
   }
 }
