--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,38 +4,36 @@
 @import url('__lang-link/_active/header__lang-link_active.css');
 
 .header {
-    display: flex;
     margin: 0 auto;
+    max-width: 984px;
+    width: 90%;
+    display: flex;
     justify-content: space-between;
     margin-top: 34px;
     margin-bottom: 58px;
+    justify-content: space-between;
+    align-items: center;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1279px) {
   .header {
-    width: calc(100% - 148px * 2);
+    width: calc(100% - 48px * 2);
     margin-bottom: 50px;
   }
 }
 
-@media screen and (max-width: 1024px) {
-    .header {
-      width: calc(100% - 48px * 2);
-      margin-bottom: 50px;
-    }
-  }
-  
-  @media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .header {
       width: calc(100% - 24px * 2);
       margin-bottom: 50px;
-      margin-top: 20px;
+      font-size: 24px;
+      line-height: 28px;
     }
   }
   
-  @media screen and (max-width: 320px) {
+  @media screen and (max-width: 767px) {
     .header {
       width: calc(100% - 16px * 2);
+      margin: 20px auto 50px;
     }
   }
-  
