--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,28 +5,35 @@
 @import url('__caption/lead__caption.css');
 
 .lead {
+  margin: auto;
+  width: 984px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 984px;
-  margin: auto;
   border-radius: 0px;
 }
 
-@media screen and (max-width: 1020px) {
+@media screen and (min-width: 1280px) {
   .lead {
-      max-width: 928px;
+    margin: 58px auto 0;
+    width: calc(100% - 148px * 2);
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .lead {
+    max-width: 928px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .lead {
-      max-width: 768px;
+    max-width: 768px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .lead {
-      max-width: 400px;
+    max-width: 400px;
   }
 }
