--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,8 +1,6 @@
 .page {
   margin: 0 auto;
-  max-width: 1280px;
-  min-width: 320px;
-  box-sizing: content-box;
+  box-sizing: border-box;
   font-family: 'Inter', 'Trebuchet MS', sans-serif;
   font-style: normal;
   font-weight: normal;
