--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,18 +1,11 @@
 .photo-grid__item {
-    width: 100%;
-    display: block;
+  object-fit: cover;
+  max-width: 100%;
+  width: 100%;
 }
 
 @media screen and (max-width: 768px) {
-    .photo-grid__item {
-        width: 100%;
-        height: auto;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .photo-grid__item {
-        width: 288px;
-        height: 216px;
-    }
+  .photo-grid__item {
+    width: auto;
+  }
 }
