--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -1,23 +1,27 @@
 .photo-grid__list {
-    margin: 0 auto 80px;
-    padding-left: 0;
-    width: 100%;
-    max-width: 1184px;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(284px, 1fr));
-    grid-gap: 1rem;
-    list-style: none;
-
+  margin: 0;
+  padding: 0;
+  display: grid;
+  list-style-type: none;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 14px;
+  gap: 16px;
 }
 
-@media screen and (max-width: 768px) {
-    .place__description {
-        margin: 0 auto 88px;
-    }
+@media screen and (max-width: 1023px) {
+  .photo-grid__list {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    gap: 14px;
   }
+}
 
-  @media screen and (max-width: 768px) {
-    .place__description {
-        margin: 0 auto 64px;
-    }
+
+@media screen and (max-width: 767px) {
+  .photo-grid__list {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat (12, 1fr);
+    gap: 12px;
   }
+}
