--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,18 +2,20 @@
 @import url('__list/photo-grid__list.css');
 
 .photo-grid {
-    box-sizing: border-box;
-    width: calc(100% - 48px * 2);
+  max-width: 1184px;
+  width: calc(100% - 48px * 2);
+  margin: 64px auto 0;
+  padding-right: 0;
 }
 
-@media screen and (max-width: 1080px) {
-    .photo-grid {
-        width: calc(100% - 24px * 2);
-    }
+@media screen and (max-width: 1023px) {
+  .photo-grid {
+    width: calc(100% - 32px * 2);
+  }
 }
 
-@media screen and (max-width: 768px) {
-    .photo-grid {
-        width: calc(100% - 16px * 2);
-    }
+@media screen and (max-width: 767px) {
+  .photo-grid {
+    width: calc(100% - 24px * 2);
+  }
 }
