--- a/blocks/place/__image-item/place__image-item.css
+++ b/blocks/place/__image-item/place__image-item.css
@@ -1,29 +1,14 @@
 .place__image-item {
+  width: 100%;
+  grid-area: image;
   margin: 0;
   padding: 0;
-  max-width: 100%;
-  min-width: 425px;
-  min-height: 460px;
   object-fit: cover;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 767px) {
   .place__image-item {
-    min-width: 440px;
-    min-height: 440px;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  .place__image-item {
-    min-width: 340px;
-    min-height: 340px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .place__image-item {
-    min-width: 320px;
-    min-height: 320px;
+    margin-bottom: 24px;
+    margin-left: 0px;
   }
 }
