--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,7 +1,12 @@
 .place__link {
-  font-weight: 400;
   font-size: 18px;
   line-height: 22px;
   text-decoration: underline;
   color: #fff;
+}
+
+.place__link:hover {
+  cursor: pointer;
+  opacity: 0.8;
+  transition: 0.3s;
 }
