--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,17 +1,5 @@
-.place__paragraph {
-  padding: 0;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 29.34px;
-}
-
-.place__paragraph:not(:last-child) {
-  margin: 0 0 24px 0;
-}
-
-@media screen and (max-width: 1024px) {
-  .place__paragraph {
-    font-size: 16px;
-    line-height: 1.62;
+@media screen and (min-width: 768px) {
+  .place__paragraph:first-of-type {
+    margin: 0;
   }
 }
