--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,22 +1,25 @@
 .place__title {
-  grid-area: title;
-  padding: 0;
   margin: 0;
+  grid-area: title;
   font-weight: 900;
   font-size: 72px;
-  line-height: 1.06;
+  line-height: 76px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
   .place__title {
     font-size: 42px;
-    line-height: 1.1;
+    line-height: 46px;
+    margin: 0;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .place__title {
-    margin: 0 16px;
+    margin-left: 16px;
+    width: 90%;
     font-size: 32px;
+    line-height: 35px;
+
   }
 }
