--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -4,11 +4,15 @@
   line-height: 1.7;
   letter-spacing: 0.2em;
   text-transform: uppercase;
-  color: #fff;
+  color: #aaa;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
   .place__url-heading {
+    width: 90%;
+    font-size: 12px;
     line-height: 1;
+    letter-spacing: 0.2em;
+    align-self: flex-start;
   }
 }
