--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,13 +1,15 @@
 .place__website {
-  margin: 0;
-  grid-area: website;
+  width: 90%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  margin: 30px 16px;
+  padding: 0;
 }
 
 @media screen and (min-width: 768px) {
   .place__website {
-    grid-area: website;
+    grid-area: url;
+    margin: 0;
+    align-self: end;
   }
 }
