--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -8,35 +8,45 @@
 @import url('__image-item/place__image-item.css');
 
 .place {
-  margin: 0 0 80px 0;
+  margin: 0;
   padding: 0;
-  display: grid;
-  grid-template-columns: minmax(auto, 1fr) auto;
-  grid-template-rows: auto auto;
-  grid-gap: 48px 40px;
-  grid-template-areas:
-    "title website"
-    "image description";
-  box-sizing: border-box;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
 }
 
-.place:last-child {
-  margin-bottom: 0;
-}
-
-@media screen and (max-width: 984px) {
+@media screen and (min-width: 1280px) {
   .place {
-    grid-gap: 48px 32px;
+    width: 984px;
+    column-gap: 40px;
   }
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (min-width: 1024px) {
   .place {
-    margin: 0 16px 48px 16px;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    grid-gap: 32px;
+    width: 928px;
+    grid-template-columns: minmax(440px, 1fr) auto;
+    column-gap: 32px;
+    padding-bottom: 80px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .place {
+    width: 720px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr));
+    grid-template-areas:
+    "title url"
+    "image description";
+    row-gap: 48px;
+    column-gap: 28px;
+    padding-bottom: 72px;
+  }
+
+  .place:last-child {
+    padding-bottom: 0px;
   }
 }
