--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,6 @@
 .page {
-  max-width: 984px;
+  max-width: 100%;
+  overflow-x: hidden;
   margin: 0 auto;
   box-sizing: border-box;
   font-family: 'Inter', 'Trebuchet MS', sans-serif;
