--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -3,25 +3,31 @@
   padding: 0;
   display: grid;
   list-style-type: none;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  gap: 14px;
-  gap: 16px;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat (12, 1fr);
+  gap: 12px;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (min-width: 768px) {
   .photo-grid__list {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
+    gap: 16px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .photo-grid__list {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     gap: 14px;
   }
 }
 
-
-@media screen and (max-width: 767px) {
+@media (min-width: 1280px) {
   .photo-grid__list {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat (12, 1fr);
-    gap: 12px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 16px;
   }
 }
