--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,20 +2,20 @@
 @import url('__list/photo-grid__list.css');
 
 .photo-grid {
-  max-width: 1184px;
+  max-width: 984px;
   width: calc(100% - 48px * 2);
-  margin: 64px auto 0;
-  padding-right: 0;
 }
 
 @media screen and (max-width: 1023px) {
   .photo-grid {
-    width: calc(100% - 32px * 2);
+    width: calc(100% - 24px * 2);
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 767px) {
   .photo-grid {
-    width: calc(100% - 24px * 2);
+    width: calc(100% - 32px);
+    margin: 64px auto 0;
+    padding-right: 0;
   }
 }
