--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -6,7 +6,7 @@
 
 .lead {
   margin: auto;
-  width: 984px;
+  max-width: 984px;
   display: flex;
   flex-direction: column;
   align-items: center;
