--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,6 +3,7 @@
 @import url('__copyright/footer__copyright.css');
 
 .footer {
+  max-width: 1184px;
   width: calc(100% - 48px * 2);
   margin: auto;
   display: flex;
