--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -2,21 +2,13 @@
   margin: 0;
   padding: 0;
   display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 16px;
   list-style-type: none;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat (12, 1fr);
-  gap: 12px;
 }
 
-@media screen and (min-width: 768px) {
-  .photo-grid__list {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    gap: 16px;
-  }
-}
-
-@media (min-width: 1024px) {
+@media screen and (max-width: 1279px) {
   .photo-grid__list {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
@@ -24,10 +16,18 @@
   }
 }
 
-@media (min-width: 1280px) {
+@media screen and (max-width: 1023px) {
   .photo-grid__list {
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, 1fr);
     gap: 16px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .photo-grid__list {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat (12, 1fr);
+    gap: 12px;
   }
 }
