--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,20 +2,31 @@
 @import url('__list/photo-grid__list.css');
 
 .photo-grid {
+  margin: 64px 148px 0;
   max-width: 984px;
   width: calc(100% - 48px * 2);
 }
 
+
+@media screen and (max-width: 1279px) {
+  .photo-grid {
+    margin-left: 48px;
+  }
+}
+
+
+
 @media screen and (max-width: 1023px) {
   .photo-grid {
+    margin: 64px 24px 0;
     width: calc(100% - 24px * 2);
   }
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (max-width: 767px) {
   .photo-grid {
-    width: calc(100% - 32px);
-    margin: 64px auto 0;
+    width: 90%;
+    margin: 64px 16px 0;
     padding-right: 0;
   }
 }
