--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,6 +1,6 @@
 .lead__title {
     max-width: 720px;
-    margin: 58px auto 32px auto;
+    margin: 0 auto 32px auto;
     font-weight: 900;
     font-size: 96px;
     line-height: 1.04;
