--- a/blocks/cover/__background-link/cover__background-link.css
+++ b/blocks/cover/__background-link/cover__background-link.css
@@ -1,7 +1,8 @@
 .cover__background-link {
   margin: 0 auto;
-  padding: 25% 0;
-  max-width: 100vw;
+  padding-top: 25%;
+  padding-bottom: 25%;
+  max-width: 100%;
   position: relative;
   display: flex;
   justify-content: center;
@@ -35,19 +36,24 @@
 
 @media screen and (max-width: 1279px) {
   .cover__background-link {
-    padding: 23.85% 0;
+    padding-top: 23.85%;
+    padding-bottom: 23.85%;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .cover__background-link {
-    padding: 21.40% 0;
+    padding-top: 21.40%;
+    padding-bottom: 21.40%;
+
   }
 }
 
 @media screen and (max-width: 767px) {
   .cover__background-link {
     width: 100vw;
-    padding: 18.4% 0;
+    padding-top: 18.4%;
+    padding-bottom: 18.4%;
+
   }
 }
