--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -7,6 +7,13 @@
   max-width: 1184px;
 }
 
+@media screen and (max-width: 1279px) {
+  .cover {
+    margin: 89px auto;
+    max-width: 100%;
+  }
+}
+
 @media screen and (max-width: 1023px) {
   .cover {
     margin: 89px auto;
