--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -6,21 +6,26 @@
 @import url('__span-accent/intro__span-accent.css');
 
 .intro {
-  width: 984px;
-  margin: 92px auto 0 auto;
+  max-width: 690px;
+  margin: 92px 442px 0 148px;
+}
+
+@media screen and (max-width: 1279px) {
+  .intro {
+    margin: 92px 288px 0 48px;
+  }
 }
 
 @media screen and (max-width: 1023px) {
   .intro {
-    margin: 88px auto 0;
-    width: calc(100% - (24px * 2));
+    margin: 88px 24px 0 24px;
+    max-width: 720px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .intro {
     margin: 88px auto;
-    max-width: 720px;
   }
 }
 
