--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,35 +5,25 @@
 @import url('__caption/lead__caption.css');
 
 .lead {
-  margin: auto;
+  margin: 58px auto 0;
   max-width: 984px;
+  width: calc(100% - 148px * 2);
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 0px;
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (max-width: 1279px) {
   .lead {
-    margin: 58px auto 0;
-    width: calc(100% - 148px * 2);
+    max-width: 928px;
+    width: calc(100% - 48px * 2);
   }
 }
 
 @media screen and (max-width: 1023px) {
   .lead {
-    max-width: 928px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .lead {
-    max-width: 768px;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .lead {
-    max-width: 400px;
+    margin: 50px auto 0;
+    width: 100%;
   }
 }
