--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,22 +1,22 @@
 .place__image {
-  max-width: 100%;
+  width: 460px;
 }
 
-@media screen and (min-width: 1280px) {
-  .place__image {
-    width: 460px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
+@media screen and (max-width: 1279px) {
   .place__image {
     width: 440px;
   }
 }
 
-
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 1024px) {
   .place__image {
     width: 340px;
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .place__image {
+    width: 288px;
   }
 }
