--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,6 @@
 .place__title {
   margin: 0;
+  max-width: 200px;
   grid-area: title;
   font-weight: 900;
   font-size: 72px;
@@ -10,7 +11,6 @@
   .place__title {
     font-size: 42px;
     line-height: 46px;
-    margin: 0;
   }
 }
 
