--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -6,31 +6,26 @@
 @import url('__span-accent/intro__span-accent.css');
 
 .intro {
-  max-width: 690px;
-  margin: 92px 442px 0 148px;
+  width: 90%;
+  margin: 64px auto 0;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (min-width: 768px) {
   .intro {
-    margin: 92px 288px 0 48px;
+    width: calc(100% - (24px * 2));
+    margin: 88px auto 0;
   }
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (min-width: 1024px) {
   .intro {
-    margin: 88px 24px 0 24px;
-    max-width: 720px;
+    margin: 92px auto 0 auto;
+    max-width: 928px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 1280px) {
   .intro {
-    margin: 88px auto;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .intro {
-    margin: 64px 16px 92px 16px;
+    max-width: 984px;
   }
 }
