--- a/blocks/place/__image-item/place__image-item.css
+++ b/blocks/place/__image-item/place__image-item.css
@@ -1,14 +1,14 @@
 .place__image-item {
   width: 100%;
-  grid-area: image;
-  margin: 0;
-  padding: 0;
+  margin-bottom: 24px;
+  margin-left: 0px;
   object-fit: cover;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .place__image-item {
-    margin-bottom: 24px;
-    margin-left: 0px;
+    grid-area: image;
+    margin: 0;
+    padding: 0;
   }
 }
