--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -1,15 +1,23 @@
 .place__description {
-  margin: 0;
-  width: 100%;
-  grid-area: description;
-  font-size: 18px;
-  line-height: 1.63;
+  width: 90%;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 163%;
+  margin: 30px 16px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .place__description {
-    width: 90%;
-    font-size: 16px;
-    margin: 30px 16px;
+    grid-area: description;
+    width: 100%;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .place__description {
+    font-size: 18px;
   }
 }
