--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,12 +1,14 @@
 .place__link {
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: normal;
   font-size: 18px;
   line-height: 22px;
-  text-decoration: underline;
   color: #fff;
 }
 
 .place__link:hover {
   cursor: pointer;
   opacity: 0.8;
-  transition: 0.3s;
+  transition: 0.4s;
 }
