--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,25 +1,25 @@
 .place__title {
-  margin: 0;
-  max-width: 200px;
-  grid-area: title;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
   font-weight: 900;
-  font-size: 72px;
-  line-height: 76px;
+  font-size: 32px;
+  line-height: 35px;
+  width: 90%;
+  margin-left: 16px;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (min-width: 768px) {
   .place__title {
+    grid-area: title;
     font-size: 42px;
     line-height: 46px;
+    margin: 0;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 1024px) {
   .place__title {
-    margin-left: 16px;
-    width: 90%;
-    font-size: 32px;
-    line-height: 35px;
-
+    font-size: 72px;
+    line-height: 76px;
   }
 }
