--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,18 +1,18 @@
 .place__url-heading {
-  margin-bottom: 12px;
-  font-size: 12px;
-  line-height: 1.7;
-  letter-spacing: 0.2em;
-  text-transform: uppercase;
+  font-family: 'Inter', sans-serif;
   color: #aaa;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 12px;
+  letter-spacing: 0.2em;
+  width: 90%;
+  margin-bottom: 12px;
+  align-self: flex-start;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (min-width: 1024px) {
   .place__url-heading {
-    width: 90%;
-    font-size: 12px;
-    line-height: 1;
-    letter-spacing: 0.2em;
-    align-self: flex-start;
+    line-height: 20px;
   }
 }
