--- a/blocks/place/__image-item/place__image-item.css
+++ b/blocks/place/__image-item/place__image-item.css
@@ -1,14 +1,25 @@
 .place__image-item {
-  margin-bottom: 24px;
-  margin-left: 0px;
   width: 100%;
+  margin: 0;
+  padding: 0;
   object-fit: cover;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 1279px) {
   .place__image-item {
-    margin: 0;
-    padding: 0;
     grid-area: image;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .place__image-item {
+    grid-area: image;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__image-item {
+    margin-bottom: 24px;
+    margin-left: 0px;
   }
 }
