--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,13 +2,15 @@
   margin-right: 18px;
   font-size: 16px;
   line-height: 1.12;
+  text-decoration: none;
+  color: #fff;
 }
 
 @media screen and (max-width: 640px) {
   .footer__link {
     margin: 0 0 32px 0;
     font-size: 24px;
-    line-height: 1;
+    line-height: 24px;
     display: block;
   }
 }
