--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,5 +1,10 @@
 .header__logo {
   width: 190px;
+  height: 44px;
+  background-image: url("../../../images/logo.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 @media screen and (max-width: 767px) {
