--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,17 +1,11 @@
 .intro__title {
   margin: 0 0 40px 0;
+  max-width: 690px;
   width: 100%;
   position: relative;
   font-weight: 900;
   font-size: 54px;
   line-height: 58px;
-}
-
-@media screen and (max-width: 1023px) {
-  .intro__title {
-    font-size: 54px;
-    line-height: 58px;
-  }
 }
 
 @media screen and (max-width: 767px) {
