--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,10 +1,10 @@
 .photo-grid__item {
-  object-fit: cover;
-  max-width: 100%;
+  width: 100%;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 767px) {
   .photo-grid__item {
-    width: 100%;
+    max-width: 100%;
+    object-fit: cover;
   }
 }
