--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -8,13 +8,13 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .place__image {
     width: 440px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .place__image {
     width: 340px;
   }
