--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,5 @@
 .place__title {
-  margin-left: 16px;
+  margin-top: 0;
   width: 90%;
   font-family: 'Inter', 'Trebuchet MS', sans-serif;
   font-style: normal;
@@ -10,12 +10,14 @@
 
 @media screen and (min-width: 1024px) {
   .place__title {
+    margin-bottom: 0;
+    margin-left: 0;
     font-size: 72px;
     line-height: 76px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .place__title {
     margin: 0;
     grid-area: title;
