--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,6 @@
 .place__title {
   margin-top: 0;
+  margin-bottom: 0;
   width: 90%;
   font-family: 'Inter', 'Trebuchet MS', sans-serif;
   font-style: normal;
