--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -5,6 +5,8 @@
   font-family: 'Inter', 'Trebuchet MS', sans-serif;
   font-style: normal;
   font-weight: 900;
+  letter-spacing: 0em;
+  text-align: left;
   font-size: 32px;
   line-height: 35px;
 }
@@ -14,12 +16,13 @@
     margin-left: 0;
     font-size: 72px;
     line-height: 76px;
+    font-style: normal;
+    font-weight: 900;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .place__title {
-    margin: 0;
     grid-area: title;
     font-size: 42px;
     line-height: 46px;
